k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: task-systems
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: josesegundo/task-systems-backend:latest # troque pela sua imagem no Docker Hub
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /swagger/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
